--- a/app/views/http_tester_rails/projects/index.html.slim
+++ b/app/views/http_tester_rails/projects/index.html.slim
@@ -1,3 +1,3 @@
 ul
   - @projects.each do |project|
-    li = link_to project.name, http_tester_project_path(project)
+    li = link_to project.name, project_path(project)
