--- a/app/views/http_tester_rails/projects/index.html.slim
+++ b/app/views/http_tester_rails/projects/index.html.slim
@@ -1,3 +1,5 @@
 ul
   - @projects.each do |project|
     li = link_to project.name, project_path(project)
+
+= link_to 'basic auth一覧', host_basic_auths_path
