--- a/app/views/sugoi_http_tester_rails/projects/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/projects/show.html.slim
@@ -1,3 +1,4 @@
+= link_to :back, root_path
 h1 = @project.name
 
 p = link_to 'テスト対象のURLをログから登録する', new_project_template_request_group_path(@project)
