--- a/app/views/sugoi_http_tester_rails/testing_hosts/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/testing_hosts/show.html.slim
@@ -5,9 +5,13 @@ h1
   = @testing_host.name
 
 h3 テストを行う
-- @template_request_groups.order(id: :desc).each do |template_request_group|
+- if @project.template_request_groups.empty?
+  p プロジェクトに登録されているログファイルが未登録です。アップロードしてください
+- @project.template_request_groups.order(id: :desc).each do |template_request_group|
   p = link_to template_request_group.created_at, project_testing_host_template_request_group_request_groups_path(@project, @testing_host, template_request_group), data: { confirm: 'HTTPリクエストを送信しますがよろしいですか？' }, method: :post
 
 h3 テスト済み
+- if @testing_host.request_groups.empty?
+  p 実行したテストがありません
 - @testing_host.request_groups.order(id: :desc).each do |request_group|
   p = link_to request_group.created_at, project_testing_host_request_group_path(@project, @testing_host, request_group)
