--- a/app/views/sugoi_http_tester_rails/request_groups/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/request_groups/show.html.slim
@@ -4,37 +4,49 @@ h1
   | のホスト
   = @testing_host.name
 
+span
+  | 5系レスポンスステータス許容回数:
+  = @testing_host.allowed_failure_count
+
 - if @request_group.status_executing?
   = link_to '停止する', request_status_abort_project_testing_host_request_group_path(@project, @testing_host, @request_group), method: :patch, data: { confirm: '停止してもいいですか？' }
 
 h3
-  | リクエスト送信数:
+  | リクエスト送信済み数:
   = @request_group.requests.count
 
 h1 ステータス
 = @request_group.testing_status
 
-h3 5系になったURL
-- @server_error_requests.each do |request|
+- limit_count = 10
+h3 5系になったURL(#{@server_error_requests.count}個)
+- @server_error_requests.limit(limit_count).each do |request|
   p
     = link_to request.path_with_params, "http://#{@testing_host.name}#{request.path_with_params}"
     | (#{request.status_code})
+  - if @server_error_requests.count > limit_count
+    p = link_to 'もっと見る', ''
 
-h3 4系になったURL
-- @client_error_requests.each do |request|
+h3 4系になったURL(#{@client_error_requests.count}個)
+- @client_error_requests.limit(limit_count).each do |request|
   p
     = link_to request.path_with_params, "http://#{@testing_host.name}#{request.path_with_params}"
     | (#{request.status_code})
+  - if @client_error_requests.count > limit_count
+    p = link_to 'もっと見る', ''
 
-
-h3 3系になったURL
-- @redirect_requests.each do |request|
+h3 3系になったURL(#{@redirect_requests.count}個)
+- @redirect_requests.limit(limit_count).each do |request|
   p
     = link_to request.path_with_params, "http://#{@testing_host.name}#{request.path_with_params}"
     | (#{request.status_code})
+  - if @redirect_requests.count > limit_count
+    p = link_to 'もっと見る', ''
 
-h3 2系になったURL
-- @success_requests.each do |request|
+h3 2系になったURL(#{@success_requests.count}個)
+- @success_requests.limit(limit_count).each do |request|
   p
     = link_to request.path_with_params, "http://#{@testing_host.name}#{request.path_with_params}"
     | (#{request.status_code})
+  - if @success_requests.count > limit_count
+    p = link_to 'もっと見る', ''
