--- a/app/views/sugoi_http_tester_rails/request_groups/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/request_groups/show.html.slim
@@ -21,13 +21,13 @@ h1 ステータス
 
 - limit_count = 10
 h3 5系になったURL(#{@server_error_requests.count}個)
-= render 'sugoi_http_tester_rails/shared/requests', requests: @server_error_requests.limit(limit_count), limit_count: limit_count, status_code_type: :server_error
+= render 'sugoi_http_tester_rails/shared/requests', requests: @server_error_requests.limit(limit_count), limit_count: limit_count, status_code_type: :server_error, requests_count: @server_error_requests.count
 
 h3 4系になったURL(#{@client_error_requests.count}個)
-= render 'sugoi_http_tester_rails/shared/requests', requests: @client_error_requests.limit(limit_count), limit_count: limit_count, status_code_type: :client_error
+= render 'sugoi_http_tester_rails/shared/requests', requests: @client_error_requests.limit(limit_count), limit_count: limit_count, status_code_type: :client_error, requests_count: @client_error_requests.count
 
 h3 3系になったURL(#{@redirect_requests.count}個)
-= render 'sugoi_http_tester_rails/shared/requests', requests: @redirect_requests.limit(limit_count), limit_count: limit_count, status_code_type: :redirest
+= render 'sugoi_http_tester_rails/shared/requests', requests: @redirect_requests.limit(limit_count), limit_count: limit_count, status_code_type: :redirest, requests_count: @redirect_requests.count
 
 h3 2系になったURL(#{@success_requests.count}個)
-= render 'sugoi_http_tester_rails/shared/requests', requests: @success_requests.limit(limit_count), limit_count: limit_count, status_code_type: :success
+= render 'sugoi_http_tester_rails/shared/requests', requests: @success_requests.limit(limit_count), limit_count: limit_count, status_code_type: :success, requests_count: @success_requests.count
