--- a/app/views/sugoi_http_tester_rails/template_request_groups/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/template_request_groups/show.html.slim
@@ -3,5 +3,9 @@
 h1
   = @project.name
   | のテスト対象のURL上位100件
+p = form_tag project_template_request_group_path(@project, @request_group), method: :get do
+  | path:
+  = text_field_tag :path, params[:path]
+  = submit_tag '前方一致検索'
 - @template_requests.each do |template_request|
   div = template_request.path_with_params
