--- a/app/views/sugoi_http_tester_rails/testing_hosts/show.html.slim
+++ b/app/views/sugoi_http_tester_rails/testing_hosts/show.html.slim
@@ -13,19 +13,19 @@ h3 テストを行う
 - if @project.template_request_groups.empty?
   p プロジェクトに登録されているログファイルが未登録です。アップロードしてください
 - @project.template_request_groups.order(id: :desc).each do |template_request_group|
-  p = link_to template_request_group.created_at, project_testing_host_template_request_group_request_groups_path(@project, @testing_host, template_request_group), data: { confirm: 'HTTPリクエストを送信しますがよろしいですか？' }, method: :post
+  p = link_to template_request_group.created_at, project_testing_host_template_request_group_testing_jobs_path(@project, @testing_host, template_request_group), data: { confirm: 'HTTPリクエストを送信しますがよろしいですか？' }, method: :post
 
 h3 テスト済み
-- if @testing_host.request_groups.empty?
+- if @testing_jobs.empty?
   p 実行したテストがありません
 p
-  - @request_groups.each do |request_group|
+  - @testing_jobs.each do |testing_job|
     ul
       li
-        = link_to request_group.created_at, project_testing_host_request_group_path(@project, @testing_host, request_group)
+        = link_to testing_job.created_at, project_testing_host_testing_job_path(@project, @testing_host, testing_job)
         ul
           li
-            = request_group.testing_status
-            | (server_error_count: #{request_group.server_error_count_grouped_by_status})
+            = testing_job.testing_status
+            | (server_error_count: #{testing_job.server_error_count_grouped_by_status})
 
-p = paginate @request_groups
+p = paginate @testing_jobs
