--- a/app/views/layouts/sugoi_http_tester_rails/application.html.erb
+++ b/app/views/layouts/sugoi_http_tester_rails/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HttpTesterRails</title>
-  <%= stylesheet_link_tag    "sugoi_http_tester_rails/application", media: "all" %>
+  <title>SugoiHttpTesterRails</title>
   <%= javascript_include_tag "sugoi_http_tester_rails/application" %>
   <%= csrf_meta_tags %>
 </head>
