add back's link

--- a/app/views/layouts/sugoi_http_tester_rails/application.html.erb
+++ b/app/views/layouts/sugoi_http_tester_rails/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>SugoiHttpTesterRails</title>
   <%= javascript_include_tag "sugoi_http_tester_rails/application" %>
+  <%= stylesheet_link_tag    "sugoi_http_tester_rails/application", media: "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
